// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContentSurround > renders with as correctly 1`] = `
"<section class="grid grid-cols-1 sm:grid-cols-2 gap-8"><a href="/pro/getting-started" class="group block px-6 py-8 rounded-lg border border-default hover:bg-elevated/50 focus-visible:outline-primary transition-colors">
    <div class="inline-flex items-center rounded-full p-1.5 bg-elevated group-hover:bg-primary/10 ring ring-accented mb-4 group-hover:ring-primary/50 transition"><span class="iconify i-lucide:arrow-left size-5 shrink-0 text-highlighted group-hover:text-primary transition-[color,translate] group-active:-translate-x-0.5" aria-hidden="true"></span></div>
    <p class="font-medium text-[15px] text-highlighted mb-1 truncate">Nuxt UI Pro</p>
    <p class="text-sm text-muted line-clamp-2">A collection of premium Vue components to create beautiful &amp; responsive Nuxt applications in minutes.</p>
  </a><a href="/pro/getting-started/theming" class="group block px-6 py-8 rounded-lg border border-default hover:bg-elevated/50 focus-visible:outline-primary transition-colors text-right">
    <div class="inline-flex items-center rounded-full p-1.5 bg-elevated group-hover:bg-primary/10 ring ring-accented mb-4 group-hover:ring-primary/50 transition"><span class="iconify i-lucide:arrow-right size-5 shrink-0 text-highlighted group-hover:text-primary transition-[color,translate] group-active:translate-x-0.5" aria-hidden="true"></span></div>
    <p class="font-medium text-[15px] text-highlighted mb-1 truncate">Theming</p>
    <p class="text-sm text-muted line-clamp-2">Learn how to customize Nuxt UI Pro components.</p>
  </a></section>"
`;

exports[`ContentSurround > renders with class correctly 1`] = `
"<div class="grid grid-cols-1 sm:grid-cols-2 gap-12"><a href="/pro/getting-started" class="group block px-6 py-8 rounded-lg border border-default hover:bg-elevated/50 focus-visible:outline-primary transition-colors">
    <div class="inline-flex items-center rounded-full p-1.5 bg-elevated group-hover:bg-primary/10 ring ring-accented mb-4 group-hover:ring-primary/50 transition"><span class="iconify i-lucide:arrow-left size-5 shrink-0 text-highlighted group-hover:text-primary transition-[color,translate] group-active:-translate-x-0.5" aria-hidden="true"></span></div>
    <p class="font-medium text-[15px] text-highlighted mb-1 truncate">Nuxt UI Pro</p>
    <p class="text-sm text-muted line-clamp-2">A collection of premium Vue components to create beautiful &amp; responsive Nuxt applications in minutes.</p>
  </a><a href="/pro/getting-started/theming" class="group block px-6 py-8 rounded-lg border border-default hover:bg-elevated/50 focus-visible:outline-primary transition-colors text-right">
    <div class="inline-flex items-center rounded-full p-1.5 bg-elevated group-hover:bg-primary/10 ring ring-accented mb-4 group-hover:ring-primary/50 transition"><span class="iconify i-lucide:arrow-right size-5 shrink-0 text-highlighted group-hover:text-primary transition-[color,translate] group-active:translate-x-0.5" aria-hidden="true"></span></div>
    <p class="font-medium text-[15px] text-highlighted mb-1 truncate">Theming</p>
    <p class="text-sm text-muted line-clamp-2">Learn how to customize Nuxt UI Pro components.</p>
  </a></div>"
`;

exports[`ContentSurround > renders with link slot correctly 1`] = `"<div class="grid grid-cols-1 sm:grid-cols-2 gap-8"><a href="/pro/getting-started" class="group block px-6 py-8 rounded-lg border border-default hover:bg-elevated/50 focus-visible:outline-primary transition-colors">Link slot</a><a href="/pro/getting-started/theming" class="group block px-6 py-8 rounded-lg border border-default hover:bg-elevated/50 focus-visible:outline-primary transition-colors text-right">Link slot</a></div>"`;

exports[`ContentSurround > renders with link-leading slot correctly 1`] = `
"<div class="grid grid-cols-1 sm:grid-cols-2 gap-8"><a href="/pro/getting-started" class="group block px-6 py-8 rounded-lg border border-default hover:bg-elevated/50 focus-visible:outline-primary transition-colors">
    <div class="inline-flex items-center rounded-full p-1.5 bg-elevated group-hover:bg-primary/10 ring ring-accented mb-4 group-hover:ring-primary/50 transition">Link leading slot</div>
    <p class="font-medium text-[15px] text-highlighted mb-1 truncate">Nuxt UI Pro</p>
    <p class="text-sm text-muted line-clamp-2">A collection of premium Vue components to create beautiful &amp; responsive Nuxt applications in minutes.</p>
  </a><a href="/pro/getting-started/theming" class="group block px-6 py-8 rounded-lg border border-default hover:bg-elevated/50 focus-visible:outline-primary transition-colors text-right">
    <div class="inline-flex items-center rounded-full p-1.5 bg-elevated group-hover:bg-primary/10 ring ring-accented mb-4 group-hover:ring-primary/50 transition">Link leading slot</div>
    <p class="font-medium text-[15px] text-highlighted mb-1 truncate">Theming</p>
    <p class="text-sm text-muted line-clamp-2">Learn how to customize Nuxt UI Pro components.</p>
  </a></div>"
`;

exports[`ContentSurround > renders with link-title slot correctly 1`] = `
"<div class="grid grid-cols-1 sm:grid-cols-2 gap-8"><a href="/pro/getting-started" class="group block px-6 py-8 rounded-lg border border-default hover:bg-elevated/50 focus-visible:outline-primary transition-colors">
    <div class="inline-flex items-center rounded-full p-1.5 bg-elevated group-hover:bg-primary/10 ring ring-accented mb-4 group-hover:ring-primary/50 transition"><span class="iconify i-lucide:arrow-left size-5 shrink-0 text-highlighted group-hover:text-primary transition-[color,translate] group-active:-translate-x-0.5" aria-hidden="true"></span></div>
    <p class="font-medium text-[15px] text-highlighted mb-1 truncate">Link title slot</p>
    <p class="text-sm text-muted line-clamp-2">A collection of premium Vue components to create beautiful &amp; responsive Nuxt applications in minutes.</p>
  </a><a href="/pro/getting-started/theming" class="group block px-6 py-8 rounded-lg border border-default hover:bg-elevated/50 focus-visible:outline-primary transition-colors text-right">
    <div class="inline-flex items-center rounded-full p-1.5 bg-elevated group-hover:bg-primary/10 ring ring-accented mb-4 group-hover:ring-primary/50 transition"><span class="iconify i-lucide:arrow-right size-5 shrink-0 text-highlighted group-hover:text-primary transition-[color,translate] group-active:translate-x-0.5" aria-hidden="true"></span></div>
    <p class="font-medium text-[15px] text-highlighted mb-1 truncate">Link title slot</p>
    <p class="text-sm text-muted line-clamp-2">Learn how to customize Nuxt UI Pro components.</p>
  </a></div>"
`;

exports[`ContentSurround > renders with nextIcon correctly 1`] = `
"<div class="grid grid-cols-1 sm:grid-cols-2 gap-8"><a href="/pro/getting-started" class="group block px-6 py-8 rounded-lg border border-default hover:bg-elevated/50 focus-visible:outline-primary transition-colors">
    <div class="inline-flex items-center rounded-full p-1.5 bg-elevated group-hover:bg-primary/10 ring ring-accented mb-4 group-hover:ring-primary/50 transition"><span class="iconify i-lucide:arrow-left size-5 shrink-0 text-highlighted group-hover:text-primary transition-[color,translate] group-active:-translate-x-0.5" aria-hidden="true"></span></div>
    <p class="font-medium text-[15px] text-highlighted mb-1 truncate">Nuxt UI Pro</p>
    <p class="text-sm text-muted line-clamp-2">A collection of premium Vue components to create beautiful &amp; responsive Nuxt applications in minutes.</p>
  </a><a href="/pro/getting-started/theming" class="group block px-6 py-8 rounded-lg border border-default hover:bg-elevated/50 focus-visible:outline-primary transition-colors text-right">
    <div class="inline-flex items-center rounded-full p-1.5 bg-elevated group-hover:bg-primary/10 ring ring-accented mb-4 group-hover:ring-primary/50 transition"><span class="iconify i-lucide:chevron-right size-5 shrink-0 text-highlighted group-hover:text-primary transition-[color,translate] group-active:translate-x-0.5" aria-hidden="true"></span></div>
    <p class="font-medium text-[15px] text-highlighted mb-1 truncate">Theming</p>
    <p class="text-sm text-muted line-clamp-2">Learn how to customize Nuxt UI Pro components.</p>
  </a></div>"
`;

exports[`ContentSurround > renders with prevIcon correctly 1`] = `
"<div class="grid grid-cols-1 sm:grid-cols-2 gap-8"><a href="/pro/getting-started" class="group block px-6 py-8 rounded-lg border border-default hover:bg-elevated/50 focus-visible:outline-primary transition-colors">
    <div class="inline-flex items-center rounded-full p-1.5 bg-elevated group-hover:bg-primary/10 ring ring-accented mb-4 group-hover:ring-primary/50 transition"><span class="iconify i-lucide:chevron-left size-5 shrink-0 text-highlighted group-hover:text-primary transition-[color,translate] group-active:-translate-x-0.5" aria-hidden="true"></span></div>
    <p class="font-medium text-[15px] text-highlighted mb-1 truncate">Nuxt UI Pro</p>
    <p class="text-sm text-muted line-clamp-2">A collection of premium Vue components to create beautiful &amp; responsive Nuxt applications in minutes.</p>
  </a><a href="/pro/getting-started/theming" class="group block px-6 py-8 rounded-lg border border-default hover:bg-elevated/50 focus-visible:outline-primary transition-colors text-right">
    <div class="inline-flex items-center rounded-full p-1.5 bg-elevated group-hover:bg-primary/10 ring ring-accented mb-4 group-hover:ring-primary/50 transition"><span class="iconify i-lucide:arrow-right size-5 shrink-0 text-highlighted group-hover:text-primary transition-[color,translate] group-active:translate-x-0.5" aria-hidden="true"></span></div>
    <p class="font-medium text-[15px] text-highlighted mb-1 truncate">Theming</p>
    <p class="text-sm text-muted line-clamp-2">Learn how to customize Nuxt UI Pro components.</p>
  </a></div>"
`;

exports[`ContentSurround > renders with surround correctly 1`] = `
"<div class="grid grid-cols-1 sm:grid-cols-2 gap-8"><a href="/pro/getting-started" class="group block px-6 py-8 rounded-lg border border-default hover:bg-elevated/50 focus-visible:outline-primary transition-colors">
    <div class="inline-flex items-center rounded-full p-1.5 bg-elevated group-hover:bg-primary/10 ring ring-accented mb-4 group-hover:ring-primary/50 transition"><span class="iconify i-lucide:arrow-left size-5 shrink-0 text-highlighted group-hover:text-primary transition-[color,translate] group-active:-translate-x-0.5" aria-hidden="true"></span></div>
    <p class="font-medium text-[15px] text-highlighted mb-1 truncate">Nuxt UI Pro</p>
    <p class="text-sm text-muted line-clamp-2">A collection of premium Vue components to create beautiful &amp; responsive Nuxt applications in minutes.</p>
  </a><a href="/pro/getting-started/theming" class="group block px-6 py-8 rounded-lg border border-default hover:bg-elevated/50 focus-visible:outline-primary transition-colors text-right">
    <div class="inline-flex items-center rounded-full p-1.5 bg-elevated group-hover:bg-primary/10 ring ring-accented mb-4 group-hover:ring-primary/50 transition"><span class="iconify i-lucide:arrow-right size-5 shrink-0 text-highlighted group-hover:text-primary transition-[color,translate] group-active:translate-x-0.5" aria-hidden="true"></span></div>
    <p class="font-medium text-[15px] text-highlighted mb-1 truncate">Theming</p>
    <p class="text-sm text-muted line-clamp-2">Learn how to customize Nuxt UI Pro components.</p>
  </a></div>"
`;

exports[`ContentSurround > renders with ui correctly 1`] = `
"<div class="grid grid-cols-1 sm:grid-cols-2 gap-8"><a href="/pro/getting-started" class="group block px-6 py-8 rounded-lg border border-default hover:bg-elevated/50 focus-visible:outline-primary transition-colors">
    <div class="inline-flex items-center rounded-full p-1.5 bg-elevated group-hover:bg-primary/10 ring ring-accented mb-4 group-hover:ring-primary/50 transition"><span class="iconify i-lucide:arrow-left size-5 shrink-0 text-highlighted group-hover:text-primary transition-[color,translate] group-active:-translate-x-0.5" aria-hidden="true"></span></div>
    <p class="font-medium text-highlighted mb-1 truncate text-xl">Nuxt UI Pro</p>
    <p class="text-sm text-muted line-clamp-2">A collection of premium Vue components to create beautiful &amp; responsive Nuxt applications in minutes.</p>
  </a><a href="/pro/getting-started/theming" class="group block px-6 py-8 rounded-lg border border-default hover:bg-elevated/50 focus-visible:outline-primary transition-colors text-right">
    <div class="inline-flex items-center rounded-full p-1.5 bg-elevated group-hover:bg-primary/10 ring ring-accented mb-4 group-hover:ring-primary/50 transition"><span class="iconify i-lucide:arrow-right size-5 shrink-0 text-highlighted group-hover:text-primary transition-[color,translate] group-active:translate-x-0.5" aria-hidden="true"></span></div>
    <p class="font-medium text-highlighted mb-1 truncate text-xl">Theming</p>
    <p class="text-sm text-muted line-clamp-2">Learn how to customize Nuxt UI Pro components.</p>
  </a></div>"
`;
